--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
     "version": "0.0.1",
     "private": false,
     "dependencies": {
-        "ws": "^8.0.0",  
         "bison": ">0",
-        "express": ">0",
+        "express": "^4.18.2",
         "log": ">0",
         "memcache": "0.3.0",
+        "path-to-regexp": "^1.7.0",
+        "router": "^1.3.3",
         "sanitizer": "0.1.2",
         "socket.io": ">0",
         "underscore": ">0",
