--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,23 @@
-version: '3'
-
 services:
   browserquest:
     build: .
-    ports:
-      - "8000:8000"
-    volumes:
-      - .:/app
+    # no host-port binding – avoids “port already in use"
+    expose:
+      - "8000"
     command: node server/server.js
+    volumes:
+      - .:/app  # keep hot-reload workflow
+    networks: [lan]
+
+  # Ngin Load Balancer
+  nginx:
+    image: nginx:1.25-alpine
+    volumes:
+      - ./deploy/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on: [browserquest]
+    ports:
+      - "80:80" # public entry-point
+    networks: [lan]
+
+networks:
+  lan:
