--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,48 @@
+version: "3.9"
+
+########################################
+# 1)  Services
+########################################
 services:
+  # ───────────── BrowserQuest game servers ─────────────
   browserquest:
-    build: .
-    # no host-port binding – avoids “port already in use"
-    expose:
-      - "8000"
+    image: browserquest:latest               # build once:  docker build -t browserquest:latest .
     command: node server/server.js
-    volumes:
-      - .:/app  # keep hot-reload workflow
+    expose: ["8000"]                         # internal only
+    healthcheck:
+      test: ["CMD-SHELL", "curl -fs http://localhost:8000/health || exit 1"]
+      interval: 10s
+      retries: 3
+    deploy:
+      replicas: 3
+      restart_policy: { condition: on-failure }
     networks: [lan]
 
-  # Ngin Load Balancer
+  # ───────────── Nginx load balancer pair ─────────────
   nginx:
     image: nginx:1.25-alpine
+    # ── Bind-mount our custom vhost and hide the default welcome page
     volumes:
-      - ./deploy/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on: [browserquest]
+      - ./deploy/nginx/browserquest.conf:/etc/nginx/conf.d/browserquest.conf:ro
+      - /dev/null:/etc/nginx/conf.d/default.conf:ro
     ports:
-      - "80:80" # public entry-point
+      - target: 80               # inside the container
+        published: 80            # change to 8080 if port 80 is busy
+        protocol: tcp
+        mode: host               # single-node Swarm, direct bind
+    healthcheck:
+      test: ["CMD-SHELL", "wget -qO- http://localhost || exit 1"]
+      interval: 10s
+      retries: 3
+    deploy:
+      replicas: 2
+      restart_policy: { condition: on-failure }
     networks: [lan]
 
+########################################
+# 2)  Overlay network (shared by both)
+########################################
 networks:
   lan:
+    driver: overlay
+    attachable: true
