--- a/deploy/nginx/browserquest.conf
+++ b/deploy/nginx/browserquest.conf
@@ -9,7 +9,7 @@ server {
     listen 80;
 
     location / {
-        proxy_pass         http://browserquest_browserquest:8000;
+        proxy_pass         http://browserquest:8000;
         proxy_http_version 1.1;
         proxy_set_header   Upgrade $http_upgrade;
         proxy_set_header   Connection $connection_upgrade;
