--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -1,30 +1,33 @@
-worker_processes auto;
-events { worker_connections 1024; }
+resolver 127.0.0.11 valid=30s;
 
-http {
-  # -- Load-balanced upstream --
-  # Compose’s internal DNS gives each task its own A record, so
-  # a single “browserquest” name is enough for round-robin
-  upstream browserquest_backend {
-    server browserquest:8000;
-  }
-
-  # Preserve WebSocket upgrades
-  map $http_upgrade $connection_upgrade {
+map $http_upgrade $connection_upgrade {
     default upgrade;
     ''      close;
-  }
+}
 
-  server {
+upstream browserquest_backend {
+    server browserquest:8000;
+}
+
+server {
     listen 80;
 
     location / {
-      proxy_pass         http://browserquest_backend;
-      proxy_http_version 1.1;
-      proxy_set_header   Upgrade $http_upgrade;
-      proxy_set_header   Connection $connection_upgrade;
-      proxy_set_header   Host $host;
-      proxy_read_timeout 86400;
+        proxy_pass         http://browserquest_backend;
+        proxy_http_version 1.1;
+        proxy_set_header   Upgrade $http_upgrade;
+        proxy_set_header   Connection $connection_upgrade;
+        proxy_set_header   Host $host;
+        proxy_read_timeout 86400;
     }
-  }
+
+    # 👇 Rediriger toutes les requêtes sur /socket.io vers le port 8000 directement
+    location /socket.io/ {
+        proxy_pass http://browserquest_backend;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Host $host;
+        proxy_read_timeout 86400;
+    }
 }
