--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -12,16 +12,14 @@ upstream browserquest_backend {
 server {
     listen 80;
 
-    location / {
-        proxy_pass         http://browserquest_backend;
-        proxy_http_version 1.1;
-        proxy_set_header   Upgrade $http_upgrade;
-        proxy_set_header   Connection $connection_upgrade;
-        proxy_set_header   Host $host;
-        proxy_read_timeout 86400;
+    resolver 127.0.0.11 valid=30s;
+
+    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg|eot|otf|wav|mp3)$ {
+        root /app/public;   # ⬅️ le bon chemin où sont tes fichiers statiques dans le container
+        expires max;
+        access_log off;
     }
 
-    # 👇 Rediriger toutes les requêtes sur /socket.io vers le port 8000 directement
     location /socket.io/ {
         proxy_pass http://browserquest_backend;
         proxy_http_version 1.1;
@@ -30,4 +28,14 @@ server {
         proxy_set_header Host $host;
         proxy_read_timeout 86400;
     }
+
+    location / {
+        proxy_pass http://browserquest_backend;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Host $host;
+        proxy_read_timeout 86400;
+    }
 }
+
